tests/variable/duplicate_param.rev
fn foo(arg, arg) { // error: a variable with the same name as already been declared in this local scope
    "body"
}